--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: fernandos/app-net-lab:latest, fernandos/app-net-lab:${{ github.run_number }}
+          tags: breso78/app-net-lab:latest, breso78/app-net-lab:${{ github.run_number }}
